objects/Audit_History__c.object
<CustomObject>
    <fields>
        <fullName>ACE_Customer_Price_Changes__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ACE Customer Price Changes</label>
        <referenceTo>ACE_Customer_Price_Changes__c</referenceTo>
        <relationshipLabel>History</relationshipLabel>
        <relationshipName>Audit_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ace_Customer_SKU_Changes__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ace Customer SKU Changes</label>
        <referenceTo>Ace_Customer_SKU_Changes__c</referenceTo>
        <relationshipLabel>Audit Histories</relationshipLabel>
        <relationshipName>Audit_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <description>Customer Name</description>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Response__c</fullName>
        <label>Customer Response</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomePage_Approval_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HomePage_Approval_Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HomePage_Approval_History__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HomePage_Approval_History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HomePage_Approval_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HomePage_Approval_Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NewSales_Price_Change_Effective_Date_Rep__c</fullName>
        <label>NewSales Price Change Effective Date Rep</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Approval_Price__c</fullName>
        <label>New Approval Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Approval_Status__c</fullName>
        <label>New Approval Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Customer_Notification_Date_Approved__c</fullName>
        <label>New Customer_Notification_Date_Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>New_Record_Lock_Code__c</fullName>
        <label>New Record Lock Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_User_Proposed_Price__c</fullName>
        <label>New User Proposed Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Old_Approval_Price__c</fullName>
        <label>Old Approval Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Old_Approval_Status__c</fullName>
        <label>Old Approval Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_SalesPriceChangeEffectiveDateApprov__c</fullName>
        <label>old SalesPrice_ChangeEffectiveDateApprov</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Old_SalesPrice_Change_Effective_Date_Rep__c</fullName>
        <label>OldSales Price Change Effective Date Rep</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Old_User_Proposed_Price__c</fullName>
        <label>Old User Proposed Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Record_Unlock_Status__c</fullName>
        <description>Record_Unlock_Status</description>
        <label>Record Unlock Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <label>SKU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>new_SalesPrice_ChangeEffectiveDateApprov__c</fullName>
        <label>new SalesPrice_ChangeEffectiveDateApprov</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>old_Customer_Notification_Date_Approved__c</fullName>
        <label>Old Customer_Notification_Date_Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>old_Record_Lock_Code__c</fullName>
        <label>old Record Lock Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Audit History</label>
    <nameField>
        <label>Audit History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Audit Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>